Adding transition to the images

--- a/website-projects/testimonial-grid/index.html
+++ b/website-projects/testimonial-grid/index.html
@@ -27,7 +27,7 @@
         <div class="flex z-10 space-x-4">
           <img src="images/image-daniel.jpg" 
             alt="" 
-            class="w-10 h-10 rounded-full ring-2 ring-purple-300">
+            class="w-10 h-10 rounded-full ring-2 ring-purple-300 hover:scale-150 transition duration-150">
           <div class="text-sm">
             <h4 class="opacity-90">Daniel Clifford</h4>
             <p class="opacity-50">Verified Graduate</p>
@@ -99,7 +99,7 @@
         <div class="flex z-10 space-x-4">
           <img src="images/image-kira.jpg" 
             alt="" 
-            class="w-10 h-10 rounded-full ring-2 ring-purple-300">
+            class="w-10 h-10 rounded-full ring-2 ring-purple-300 hover:scale-150 transition duration-150">
           <div class="text-sm">
             <h4 class="opacity-90">Kira Whittle</h4>
             <p class="opacity-50">Verified Graduate</p>
